# linear-regression

./: application.py  main.py  pyproject.toml
Dataset/: banque_credit_BRUT.csv  banque_credit_CLEAN.csv  banque_credit_ML_READY.csv
