[project]
name = "application-regression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
